Current fix for socket error, won't work with concurrency