@@ -26,14 +26,11 @@ public class TCPResourceManager {
 
     public void runServer() throws IOException {
         ServerSocket serverSocket = new ServerSocket(socketPort);
-
         System.out.println("Server ready...");
 
         while (true){
             Socket clientSocket = serverSocket.accept();
-
             handleClient(clientSocket);
-
         }
 
     }
@@ -45,105 +42,98 @@ public class TCPResourceManager {
             Request req = (Request) ois.readObject();
             Response res = new Response();
 
+            System.out.println("Handling request for " + req.method);
+            switch (req.method){
+                case "AddFlight":
+                    res.result = resourceManager.addFlight(
+                            Integer.parseInt((String) req.args.get(0)),
+                            Integer.parseInt((String) req.args.get(1)),
+                            Integer.parseInt((String) req.args.get(2))
+                    );
+                    break;
 
+                case "AddCars":
+                    res.result = resourceManager.addCars(
+                            (String) req.args.get(0),
+                            Integer.parseInt((String) req.args.get(1)),
+                            Integer.parseInt((String) req.args.get(2))
+                    );
+                    break;
+                case "AddRooms":
+                    res.result = resourceManager.addRooms(
+                            (String) req.args.get(0),
+                            Integer.parseInt((String) req.args.get(1)),
+                            Integer.parseInt((String) req.args.get(2))
+                    );
+                    break;
 
+                case "DeleteFlight":
+                    res.result = resourceManager.deleteFlight(
+                            Integer.parseInt((String) req.args.getFirst())
+                    );
+                    break;
 
-                switch (req.method){
-                    case "AddFlight":
-                        System.out.println("Adding flight...");
-                        res.result = resourceManager.addFlight(
-                                Integer.parseInt((String) req.args.get(0)),
-                                Integer.parseInt((String) req.args.get(1)),
-                                Integer.parseInt((String) req.args.get(2))
-                        );
-                        System.out.println("Result: " + res.result);
-                        break;
+                case "DeleteCars":
+                    res.result = resourceManager.deleteCars(
+                            (String) req.args.getFirst()
+                    );
+                    break;
 
-                    case "AddCars":
-                        res.result = resourceManager.addCars(
-                                (String) req.args.get(0),
-                                (int) req.args.get(1),
-                                (int) req.args.get(2)
-                        );
-                        break;
-                    case "AddRooms":
-                        res.result = resourceManager.addRooms(
-                                (String) req.args.get(0),
-                                (int) req.args.get(1),
-                                (int) req.args.get(2)
-                        );
-                        break;
-
-                    case "DeleteFlight":
-                        res.result = resourceManager.deleteFlight(
-                                (int) req.args.getFirst()
-                        );
-                        break;
-
-                    case "DeleteCars":
-                        res.result = resourceManager.deleteCars(
-                                (String) req.args.getFirst()
-                        );
-                        break;
-
-                    case "DeleteRooms":
-                        res.result = resourceManager.deleteRooms(
-                                (String) req.args.getFirst()
-                        );
-                        break;
-                    case "QueryFlight":
-                        res.result = resourceManager.queryFlight(
-                                (int) req.args.getFirst()
-                        );
-                        break;
-                    case "QueryRooms":
-                        res.result = resourceManager.queryRooms(
-                                (String) req.args.getFirst()
-                        );
-                        break;
-                    case "QueryCars":
-                        res.result = resourceManager.queryCars(
-                                (String) req.args.getFirst()
-                        );
-                        break;
-                    case "QueryFlightPrice":
-                        res.result = resourceManager.queryFlightPrice(
-                                (int) req.args.getFirst()
-                        );
-                        break;
-                    case "QueryCarsPrice":
-                        res.result = resourceManager.queryCarsPrice(
-                                (String) req.args.getFirst()
-                        );
-                        break;
-                    case "QueryRoomsPrice":
-                        res.result = resourceManager.queryRoomsPrice(
-                                (String) req.args.getFirst()
-                        );
-                        break;
-                    case "ReserveFlight":
-                        res.result = resourceManager.reserveFlight(
-                                (int) req.args.get(0),
-                                (int) req.args.get(1)
-                        );
-                        break;
-                    case "ReserveCar":
-                        res.result = resourceManager.reserveCar(
-                                (int) req.args.get(0),
-                                (String) req.args.get(1)
-                        );
-                        break;
-                    case "ReserveRoom":
-                        res.result = resourceManager.reserveRoom(
-                                (int) req.args.get(0),
-                                (String) req.args.get(1)
-                        );
-                        break;
-
+                case "DeleteRooms":
+                    res.result = resourceManager.deleteRooms(
+                            (String) req.args.getFirst()
+                    );
+                    break;
+                case "QueryFlight":
+                    res.result = resourceManager.queryFlight(
+                            Integer.parseInt((String) req.args.getFirst())
+                    );
+                    break;
+                case "QueryRooms":
+                    res.result = resourceManager.queryRooms(
+                            (String) req.args.getFirst()
+                    );
+                    break;
+                case "QueryCars":
+                    res.result = resourceManager.queryCars(
+                            (String) req.args.getFirst()
+                    );
+                    break;
+                case "QueryFlightPrice":
+                    res.result = resourceManager.queryFlightPrice(
+                            Integer.parseInt((String) req.args.getFirst())
+                    );
+                    break;
+                case "QueryCarsPrice":
+                    res.result = resourceManager.queryCarsPrice(
+                            (String) req.args.getFirst()
+                    );
+                    break;
+                case "QueryRoomsPrice":
+                    res.result = resourceManager.queryRoomsPrice(
+                            (String) req.args.getFirst()
+                    );
+                    break;
+                case "ReserveFlight":
+                    res.result = resourceManager.reserveFlight(
+                            Integer.parseInt((String) req.args.get(0)),
+                            Integer.parseInt((String) req.args.get(1))
+                    );
+                    break;
+                case "ReserveCar":
+                    res.result = resourceManager.reserveCar(
+                            Integer.parseInt((String) req.args.get(0)),
+                            (String) req.args.get(1)
+                    );
+                    break;
+                case "ReserveRoom":
+                    res.result = resourceManager.reserveRoom(
+                            Integer.parseInt((String) req.args.get(0)),
+                            (String) req.args.get(1)
+                    );
+                    break;
                 }
-
-
-            System.out.println("Sending response to Middleware...");
+            System.out.println("Success, sending response...");
             oos.writeObject(res);
             oos.flush();
 
